--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --mode=production",
-    "dev": "cross-env NODE_ENV=development webpack s --mode=development --progress --open"
+    "dev": "cross-env NODE_ENV=development webpack s --mode=development --progress --open",
+    "deploy": "cross-env NODE_ENV=production gh-pages -d dist"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -33,6 +34,7 @@
     "css-minimizer-webpack-plugin": "^3.4.1",
     "cssnano": "^5.0.16",
     "dotenv": "^16.0.0",
+    "gh-pages": "^4.0.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "image-minimizer-webpack-plugin": "^3.2.3",
